--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <h2 class="section-title">Nasz zespół</h2>
           <ul class="section-gray-list">
             <li class="section-gray-list-item">
-              <figure class="section-gray-figure">
+              <figure class="figure">
                 <img
                   src="./images/main/image4.jpg"
                   alt="mężczyzna w okularach i bordowej koszuli"
@@ -146,7 +146,7 @@
               </figure>
             </li>
             <li class="section-gray-list-item">
-              <figure class="section-gray-figure">
+              <figure class="figure">
                 <img
                   src="./images/main/image5.jpg"
                   alt="kobieta w okularach, z długimi blond włosami"
@@ -160,7 +160,7 @@
               </figure>
             </li>
             <li class="section-gray-list-item">
-              <figure class="section-gray-figure">
+              <figure class="figure">
                 <img
                   src="./images/main/image6.jpg"
                   alt="mężczyzna w niebieskiej koszuli"
@@ -174,7 +174,7 @@
               </figure>
             </li>
             <li class="section-gray-list-item">
-              <figure class="section-gray-figure">
+              <figure class="figure">
                 <img
                   src="./images/main/image7.jpg"
                   alt="mężczyzna w okularach, ubrany w czarny t-shirt"
