--- a/portfolio.html
+++ b/portfolio.html
@@ -72,9 +72,9 @@
           </li>
         </ul>
 
-        <ul class="images-list">
+        <ul class="images-list container">
           <li class="images-list-item">
-            <figure>
+            <figure class="figure">
               <img
                 src="./images/portfolio/img1.jpg"
                 alt="zdjęcia trzech pracowników, dwie kobiety i mężczyzna"
@@ -88,7 +88,7 @@
             </figure>
           </li>
           <li class="images-list-item">
-            <figure>
+            <figure class="figure">
               <img
                 src="./images/portfolio/img2.jpg"
                 alt="dwóch mężczyzn gra w koszykówkę"
@@ -102,7 +102,7 @@
             </figure>
           </li>
           <li class="images-list-item">
-            <figure>
+            <figure class="figure">
               <img
                 src="./images/portfolio/img3.jpg"
                 alt="logo restauracji na tle ryby"
@@ -116,7 +116,7 @@
             </figure>
           </li>
           <li class="images-list-item">
-            <figure>
+            <figure class="figure">
               <img
                 src="./images/portfolio/img4.jpg"
                 alt="czarne słuchawki nauszne"
@@ -130,7 +130,7 @@
             </figure>
           </li>
           <li class="images-list-item">
-            <figure>
+            <figure class="figure">
               <img
                 src="./images/portfolio/img5.jpg"
                 alt="dwa kartonowe pudełka, białe i brązowe"
@@ -144,7 +144,7 @@
             </figure>
           </li>
           <li class="images-list-item">
-            <figure>
+            <figure class="figure">
               <img
                 src="./images/portfolio/img6.jpg"
                 alt="monitor komputera z wyświetloną stroną internetową"
@@ -158,7 +158,7 @@
             </figure>
           </li>
           <li class="images-list-item">
-            <figure>
+            <figure class="figure">
               <img
                 src="./images/portfolio/img7.jpg"
                 alt="otwarte czasopismo"
@@ -172,7 +172,7 @@
             </figure>
           </li>
           <li class="images-list-item">
-            <figure>
+            <figure class="figure">
               <img
                 src="./images/portfolio/img8.jpg"
                 alt="biała papierowa etykieta z napisem Label Tag"
@@ -186,7 +186,7 @@
             </figure>
           </li>
           <li class="images-list-item">
-            <figure>
+            <figure class="figure">
               <img
                 src="./images/portfolio/img9.jpg"
                 alt="mężczyzna pisze na laptopie"
